# libEDMIDI

./: .gitignore  CMakeLists.txt  LICENSE.txt
include/: emu_de_midi.h
src/: CEnvelope.cpp  CEnvelope.hpp  CMIDIMessage.cpp  CMIDIMessage.hpp  CMIDIModule.cpp  CMIDIModule.hpp  CMIDISequencer.cpp  COpllDevice.cpp  COpllDevice.hpp  CPSGDrum.cpp  CPSGDrum.hpp  CSMF.cpp  CSMF.hpp  CSMFPlay.cpp  CSMFPlay.hpp  CSccDevice.cpp  CSccDevice.hpp  DsaCommon.hpp  SccWave.h  emu_de_midi.cpp
src/device/: 2413tone.h  emu2149.c  emu2149.h  emu2212.c  emu2212.h  emu2413.c  emu2413.h
src/sequencer/: midi_sequencer_impl.hpp
utils/: main_sdl.c  main_sdl.cpp  main_winmm.cpp
utils/win32/: libedmidi.sln  libedmidi.vcxproj  midiplay.cpp  midiplay.vcxproj
